Update and rename aruzhan.html to asekaruzhan.html

--- a/asekaruzhan.html
+++ b/asekaruzhan.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <img src="C:\Users\TEMP.Admien-ПК.001\Downloads\я тебя люблю.jpg" alt="">
+    <h1> I love you...Aruzhan) </h1>
   </body>
 </html>
